--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
-APP_ENV=local
+APP_ENV=local 
 APP_DEBUG=true
 APP_KEY=SomeRandomString
 APP_URL=http://localhost
 
-DB_HOST=172.31.8.8
+DB_HOST=172.17.0.2
 DB_DATABASE=homestead
 DB_USERNAME=homestead
-DB_PASSWORD=sePret^i
-DB_CONNECTION=mysql
-DB_PORT=3306
+DB_PASSWORD=securepass
+
 
 CACHE_DRIVER=file
 SESSION_DRIVER=file
